--- a/client_card_style.css
+++ b/client_card_style.css
@@ -1,12 +1,21 @@
+@font-face {
+    font-family: 'pf_beausans_prolight';
+    src: url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff2') format('woff2'),
+         url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html {
     width: 100%;
     height: 100%;
-    font-family: 'PF BeauSans Pro Light';
+    font-family: 'pf_beausans_prolight';
     font-size: 13px;
 }
 
 body {
-    background: #9C9C9C;
+    background: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,13 +26,14 @@ body {
 span {
     background-color: #fff;
     padding: 8px;
-    border-radius: 5px;
+    border-radius: 7px;
     display: flex;
     width: 250px;
     max-height: 30%;
     font-size: 12px;
     overflow: auto;
     scroll-snap-type: y mandatory;
+    border: 3px solid #F6C90E; 
 }
 
 p {
@@ -32,7 +42,7 @@ p {
 }
 
 a {
-    background-color: #F4C80E;
+    background-color: #F6C90E;
     color: #ffffff;
     border-radius: 10px;
     padding: 8px;
@@ -41,9 +51,10 @@ a {
 }
 
 #profileImg {
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
     margin-left: 30px;
+    margin-bottom: -10px;
 }
 
 #walletImg {
@@ -56,7 +67,7 @@ a {
     display: flex;
     flex-direction: column;
     /* margin-left: 20px; */
-    color: #fff;
+    color: #000000;
     text-align: right;
 }
 
@@ -72,7 +83,33 @@ a {
     padding-top: 8px;
 }
 
-@media screen and (max-device-width: 900px) {
+.visible {
+    margin: 50px;
+    content: "";
+    width: 50px;
+    height: 50px;
+    border: 5px solid #312f32;
+    border-top-color: transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* .hidden {
+    display: none;
+    transition: opacity 0.5s ease-out;
+    pointer-events: none;
+} */
+
+@media screen and (max-device-width: 850px) {
     html {
         font-size: 43px;
     }
@@ -86,6 +123,7 @@ a {
         border-radius: 15px;
         width: 800px;
         font-size: 42px;
+        border: 5px solid #F6C90E; 
     }
     
     p {
@@ -102,6 +140,7 @@ a {
         width: 350px;
         height: 350px;
         margin-left: 85px;
+        margin-bottom: -30px;
     }
     
     #walletImg {
