--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -1,12 +1,20 @@
+@font-face {
+    font-family: 'pf_beausans_prolight';
+    src: url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff2') format('woff2'),
+         url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html {
     width: 100%;
     height: 100%;
-    font-family: 'PF BeauSans Pro Light';
+    font-family: 'pf_beausans_prolight';
     font-size: 43px;
 }
 
 body {
-    background: #9C9C9C;
+    background: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,6 +32,7 @@ span {
     font-size: 42px;
     overflow: auto;
     scroll-snap-type: y mandatory;
+    border: 5px solid #F6C90E; 
 }
 
 p {
@@ -32,7 +41,7 @@ p {
 }
 
 a {
-    background-color: #F4C80E;
+    background-color: #F6C90E;
     color: #ffffff;
     border-radius: 20px;
     padding: 18px;
@@ -44,6 +53,7 @@ a {
     width: 350px;
     height: 350px;
     margin-left: 85px;
+    margin-bottom: -30px;
 }
 
 #walletImg {
@@ -56,7 +66,7 @@ a {
     display: flex;
     flex-direction: column;
     /* margin-left: 20px; */
-    color: #fff;
+    color: #000000;
     text-align: right;
 }
 
@@ -70,4 +80,30 @@ a {
 
 #extraInfo {
     padding-top: 8px;
+}
+
+.visible {
+    margin: 50px;
+    content: "";
+    width: 50px;
+    height: 50px;
+    border: 5px solid #312f32;
+    border-top-color: transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.hidden {
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+    pointer-events: none;
 }
