--- a/client_card_style.css
+++ b/client_card_style.css
@@ -7,6 +7,15 @@
 
 }
 
+@font-face {
+    font-family: 'franklin_gothic_mediumregular';
+    src: url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_franklin_gothic_medium-webfont.woff2') format('woff2'),
+         url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_franklin_gothic_medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html {
     width: 100%;
     height: 100%;
@@ -29,7 +38,7 @@ span {
     border-radius: 7px;
     display: flex;
     width: 250px;
-    max-height: 30%;
+    max-height: 250px;
     font-size: 12px;
     overflow: auto;
     scroll-snap-type: y mandatory;
@@ -38,7 +47,7 @@ span {
 
 p {
     font-size: 12px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'franklin_gothic_mediumregular';
 }
 
 a {
@@ -123,7 +132,8 @@ a {
         border-radius: 15px;
         width: 800px;
         font-size: 42px;
-        border: 5px solid #F6C90E; 
+        border: 5px solid #F6C90E;
+        max-height: 600px;
     }
     
     p {
