--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -6,6 +6,15 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'franklin_gothic_mediumregular';
+    src: url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_franklin_gothic_medium-webfont.woff2') format('woff2'),
+         url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_franklin_gothic_medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html {
     width: 100%;
     height: 100%;
@@ -28,7 +37,7 @@ span {
     border-radius: 15px;
     display: flex;
     width: 800px;
-    max-height: 30%;
+    max-height: 600px;
     font-size: 42px;
     overflow: auto;
     scroll-snap-type: y mandatory;
@@ -37,7 +46,7 @@ span {
 
 p {
     font-size: 42px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'franklin_gothic_mediumregular';
 }
 
 a {
