--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -3,9 +3,9 @@
 
 
 @font-face {
-    font-family: 'pf_beausans_prolight';
-    src: url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff2') format('woff2'),
-         url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff') format('woff');
+    font-family: 'franklin_gothic_mediumregular';
+    src: url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_franklin_gothic_medium-webfont.woff2') format('woff2'),
+         url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_franklin_gothic_medium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
