--- a/client_card_style.css
+++ b/client_card_style.css
@@ -1,7 +1,6 @@
 @font-face {
     font-family: 'pf_beausans_prolight';
-    src: url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff2') format('woff2'),
-         url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff') format('woff');
+    src: url("https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/PFBeauSansPro-Light.ttf") format("truetype");    
     font-weight: normal;
     font-style: normal;
 
@@ -9,7 +8,6 @@
 
 @font-face {
     font-family: 'franklin_gothic_mediumregular';
-
     src: url("https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_Franklin Gothic Medium.ttf") format("truetype"); 
     font-weight: normal;
     font-style: normal;
