--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -1,15 +1,14 @@
 @font-face {
     font-family: 'pf_beausans_prolight';
-    src: url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff2') format('woff2'),
-         url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/pfbeausanspro-light-webfont.woff') format('woff');
+    src: url("https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/PFBeauSansPro-Light.ttf") format("truetype");    
     font-weight: normal;
     font-style: normal;
+
 }
 
 @font-face {
     font-family: 'franklin_gothic_mediumregular';
-    src: url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_franklin_gothic_medium-webfont.woff2') format('woff2'),
-         url('https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_franklin_gothic_medium-webfont.woff') format('woff');
+    src: url("https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/ofont.ru_Franklin Gothic Medium.ttf") format("truetype"); 
     font-weight: normal;
     font-style: normal;
 
