--- a/choose_child_style.css
+++ b/choose_child_style.css
@@ -20,7 +20,7 @@ html {
     font-family: 'pf_beausans_prolight';
 }
 
-body {
+form {
     background: #fff;
     display: flex;
     flex-direction: column;
@@ -29,9 +29,15 @@ body {
     padding: 10%;
 }
 
+label {
+    font-size: 14px;
+    text-align: center;
+    width: 400px;
+}
+
 select {
     padding: 3px;
-    font-size: 26px;
+    font-size: 16px;
     border: 2px solid #eedd95;
     border-radius: 5px;
 }
@@ -47,7 +53,7 @@ button {
     color: #ffffff;
     border-radius: 10px;
     padding: 8px;
-    font-size: 22px;
+    font-size: 12px;
     font-family: 'franklin_gothic_mediumregular';
     margin: 10px;
     border: none;
