--- a/choose_child_style_iphone.css
+++ b/choose_child_style_iphone.css
@@ -20,7 +20,7 @@ html {
     font-family: 'pf_beausans_prolight';
 }
 
-body {
+form {
     background: #fff;
     display: flex;
     flex-direction: column;
@@ -29,11 +29,17 @@ body {
     padding: 40%;
 }
 
+label {
+    font-size: 40px;
+    text-align: center;
+    width: 400px;
+}
+
 select {
-    font-size: 50px;
     padding: 10px;
     border: 5px solid #eedd95;
     border-radius: 8px;
+    font-size: 50px;
 }
 
 option {
