--- a/client_card_style.css
+++ b/client_card_style.css
@@ -3,7 +3,6 @@
     src: url("https://fedorchuk-valeria.github.io/card-client-kiberone/fonts/PFBeauSansPro-Light.ttf") format("truetype");    
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -15,14 +14,15 @@
 }
 
 html {
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     font-family: 'pf_beausans_prolight';
     font-size: 13px;
+    background: #fff;
 }
 
 body {
-    background: #fff;
+    /* background: #fff; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -48,13 +48,46 @@ p {
     font-family: 'franklin_gothic_mediumregular';
 }
 
-a {
+a, button {
     background-color: #F6C90E;
     color: #ffffff;
     border-radius: 10px;
     padding: 8px;
     text-decoration: none;
     font-size: 12px;
+    border: none;
+}
+
+i {
+    font-size: 10px;
+    background-color: #fff;
+}
+
+textarea {
+    width: 250px;
+    height: 80px;
+    font-size: 12px;
+    border: 3px solid #F6C90E; 
+    margin-bottom: 5px;
+    padding: 8px;
+    border-radius: 7px;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#sendButton {
+    width: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+#feedback {
+    margin-top: 8px;
+    margin-bottom: 10px;
 }
 
 #profileImg {
@@ -90,33 +123,7 @@ a {
     padding-top: 8px;
 }
 
-.visible {
-    margin: 50px;
-    content: "";
-    width: 50px;
-    height: 50px;
-    border: 5px solid #312f32;
-    border-top-color: transparent;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-/* .hidden {
-    display: none;
-    transition: opacity 0.5s ease-out;
-    pointer-events: none;
-} */
-
-@media screen and (max-device-width: 850px) {
+/* @media screen and (max-device-width: 850px) {
     html {
         font-size: 43px;
     }
@@ -161,4 +168,4 @@ a {
         width: 820px;
         margin-bottom: 45px;
     }
-}
+} */
