--- a/error_page_style.css
+++ b/error_page_style.css
@@ -10,7 +10,7 @@ html {
     width: 100%;
     height: 100%;
     font-family: 'franklin_gothic_mediumregular';
-    font-size: 25px;
+    font-size: 15px;
 }
 
 body {
@@ -20,4 +20,9 @@ body {
     align-items: center;
     justify-content: center;
     padding: 5%;
+}
+
+img {
+    width: 130px;
+    height: 210px;
 }
