--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -15,8 +15,8 @@
 }
 
 html {
-    /* width: 100%; */
-    /* height: 100%; */
+    width: 100%;
+    height: 100vw;
     font-family: 'pf_beausans_prolight';
     font-size: 43px;
     background: #fff;
