--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -19,7 +19,7 @@ html {
     height: 100vw;
     font-family: 'pf_beausans_prolight';
     font-size: 43px;
-    background: #fff;
+    background: ##a8b0bd;
     position: fixed;
 }
 
