--- a/client_card_style.css
+++ b/client_card_style.css
@@ -14,11 +14,12 @@
 }
 
 html {
-    /* width: 100%; */
+    width: 100%;
     /* height: 100%; */
     font-family: 'pf_beausans_prolight';
     font-size: 13px;
-    background: #fff;
+    background-color: #a8b0bd;
+    position: relative;
 }
 
 body {
