--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -16,11 +16,11 @@
 
 html {
     width: 100%;
-    height: 100vw;
+    /* height: 100vw; */
     font-family: 'pf_beausans_prolight';
     font-size: 43px;
-    background-color: #8da694;
-    position: static;
+    background-color: #a8b0bd;
+    position: relative;
 }
 
 body {
