--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -19,8 +19,8 @@ html {
     /* height: 100vw; */
     font-family: 'pf_beausans_prolight';
     font-size: 43px;
-    background-color: #a8b0bd;
-    position: relative;
+    background-color: #8da694;
+    position: absolute;
 }
 
 body {
