--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -21,6 +21,7 @@ html {
     font-size: 43px;
     background-color: #FFEFD5;
     position: absolute;
+    bottom: 10px;
 }
 
 body {
@@ -31,6 +32,7 @@ body {
     justify-content: center;
     padding: 5%;
     position: absolute;
+    bottom: 10px;
 }
 
 span {
