--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -20,8 +20,6 @@ html {
     font-family: 'pf_beausans_prolight';
     font-size: 43px;
     background-color: #AFEEEE;
-    position: absolute;
-    bottom: 10px;
 }
 
 body {
@@ -31,8 +29,6 @@ body {
     align-items: center;
     justify-content: center;
     padding: 5%;
-    position: absolute;
-    bottom: 10px;
 }
 
 span {
@@ -129,4 +125,35 @@ form {
 
 #extraInfo {
     padding-top: 8px;
+}
+
+
+@media (max-height: 2500px) {
+    html {
+        height: 2500px;
+    }
+}
+
+@media (max-height: 1500px) {
+    html {
+        height: 1500px;
+    }
+}
+
+@media (max-height: 1000px) {
+    html {
+        height: 1000px;
+    }
+}
+
+@media (max-height: 800px) {
+    html {
+        height: 800px;
+    }
+}
+
+@media (max-height: 500px) {
+    html {
+        height: 500px;
+    }
 }
