--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -16,10 +16,10 @@
 
 html {
     width: 100%;
-    /* height: 100vw; */
+    height: 2500px;
     font-family: 'pf_beausans_prolight';
     font-size: 43px;
-    background-color: #AFEEEE;
+    background-color: #F08080;
 }
 
 body {
@@ -125,35 +125,4 @@ form {
 
 #extraInfo {
     padding-top: 8px;
-}
-
-
-@media (max-height: 2500px) {
-    html {
-        height: 2500px;
-    }
-}
-
-@media (max-height: 1500px) {
-    html {
-        height: 1500px;
-    }
-}
-
-@media (max-height: 1000px) {
-    html {
-        height: 1000px;
-    }
-}
-
-@media (max-height: 800px) {
-    html {
-        height: 800px;
-    }
-}
-
-@media (max-height: 500px) {
-    html {
-        height: 500px;
-    }
 }
