--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -16,10 +16,10 @@
 
 html {
     width: 100%;
-    height: 2500px;
+    height: 3000px;
     font-family: 'pf_beausans_prolight';
     font-size: 43px;
-    background-color: #F08080;
+    background-color: #DDA0DD;
 }
 
 body {
@@ -64,7 +64,7 @@ i {
     background-color: #fff;
 }
 
-textarea {
+input {
     width: 800px;
     height: 180px;
     font-size: 40px;
