--- a/client_card_style.css
+++ b/client_card_style.css
@@ -15,15 +15,14 @@
 
 html {
     width: 100%;
-    /* height: 100%; */
+    height: 1000px;
     font-family: 'pf_beausans_prolight';
     font-size: 13px;
-    background-color: #a8b0bd;
-    position: relative;
+    /* background-color: #ffff; */
 }
 
 body {
-    /* background: #fff; */
+    background: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
