--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -19,11 +19,10 @@ html {
     height: 3000px;
     font-family: 'pf_beausans_prolight';
     font-size: 43px;
-    background-color: #DDA0DD;
 }
 
 body {
-    /* background: #fff; */
+    background: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,7 +63,7 @@ i {
     background-color: #fff;
 }
 
-input {
+textarea {
     width: 800px;
     height: 180px;
     font-size: 40px;
