--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -16,7 +16,7 @@
 
 html {
     width: 100%;
-    height: 3000px;
+    height: auto;
     font-family: 'pf_beausans_prolight';
     font-size: 43px;
 }
