--- a/client_card_style.css
+++ b/client_card_style.css
@@ -15,7 +15,7 @@
 
 html {
     width: 100%;
-    height: 1000px;
+    height: 100vh;
     font-family: 'pf_beausans_prolight';
     font-size: 13px;
     /* background-color: #ffff; */
@@ -48,7 +48,7 @@ p {
     font-family: 'franklin_gothic_mediumregular';
 }
 
-a, button {
+a {
     background-color: #F6C90E;
     color: #ffffff;
     border-radius: 10px;
@@ -58,7 +58,7 @@ a, button {
     border: none;
 }
 
-i {
+/* i {
     font-size: 10px;
     background-color: #fff;
 }
@@ -88,7 +88,7 @@ form {
 #feedback {
     margin-top: 8px;
     margin-bottom: 10px;
-}
+} */
 
 #profileImg {
     width: 110px;
