--- a/client_card_style_iphone.css
+++ b/client_card_style_iphone.css
@@ -62,17 +62,11 @@ i {
     font-size: 16px;
     background-color: #fff;
 } */
-/* 
+
 textarea {
     width: 800px;
     height: 180px;
-    font-size: 40px;
-    border: 5px solid #F6C90E; 
-    margin-bottom: 15px;
-    border-radius: 15px;
-    padding: 16px;
-    margin-left: -2px;
-} */
+}
 
 /* form {
     display: flex;
