--- a/feed_back_form_style.css
+++ b/feed_back_form_style.css
@@ -9,31 +9,27 @@ button {
 }
 
 i {
-    font-size: 2.3vw;
+    font-size: 3vw;
     background-color: #fff;
 }
 
 textarea {
-    font-size: 4.5vw;
-    border: 0.5vw solid #F6C90E; 
+    font-size: 5vw;
+    border: 0.5vw solid #F6C90E;
     margin-bottom: 2vw;
-    margin-top: 1vw;
-    border-radius: 1.5vw;
-    padding: 2vw;
-    margin-left: -1vw;
+    /* margin-top: 1vw; */
+    border-radius: 2vw;
+    padding: 3vw;
+    /* margin-left: -1vw; */
+    width: 90vw;
 }
-
-#main:focus-within {
-    position: fixed;
-    margin-bottom: 5vw;
-}
-
 
 
 form {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     flex-direction: column;
+    
     /* padding: 4px; */
 }
 
@@ -47,4 +43,12 @@ form {
 #feedback {
     margin-top: 1vw;
     margin-bottom: 3vw;
+    
+}
+
+#forSendButton {
+    width: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
