--- a/client_card_style.css
+++ b/client_card_style.css
@@ -15,7 +15,7 @@
 
 html {
     width: 100%;
-    height: 100vh;
+    height: 5000px;
     font-family: 'pf_beausans_prolight';
     font-size: 5vw;
     /* background-color: #ffff; */
@@ -58,7 +58,7 @@ a {
     padding-left: 6vw;
     padding-right: 6vw;
     text-decoration: none;
-    font-size: 3vw;
+    font-size: 5vw;
     border: none;
 }
 
