--- a/client_card_style.css
+++ b/client_card_style.css
@@ -15,7 +15,7 @@
 
 html {
     width: 100%;
-    height: 100vw;
+    height: 2000px;
     font-family: 'pf_beausans_prolight';
     font-size: 5vw;
     /* background-color: #ffff; */
@@ -72,7 +72,7 @@ textarea {
 #profileImg {
     width: 45vw;
     height: 45vw;
-    margin-left: 10vw;
+    margin-left: 5vw;
     margin-bottom: -5vw;
 }
 
