--- a/client_card_style.css
+++ b/client_card_style.css
@@ -15,7 +15,7 @@
 
 html {
     width: 100%;
-    height: 1000px;
+    height: 150vh;
     font-family: 'pf_beausans_prolight';
     font-size: 5vw;
     /* background-color: #ffff; */
